fixed overflow

--- a/juegos-serios-frontend/src/index.css
+++ b/juegos-serios-frontend/src/index.css
@@ -294,6 +294,8 @@ button:focus-visible {
 }
 
 .short-card-name {
+  /* overflow-x: hiden; */
+  overflow-x: scroll;
   font-size: 2em;
   color: white;
   display: flex;
@@ -306,10 +308,18 @@ button:focus-visible {
 }
 
 .short-card-circle-img {
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   border-radius: 50%;
   border: 7px solid #fff;
   width: 120px;
   height: 120px;
+}
+
+.short-card-circle-img > img{
+  width: fit-content;
 }
 
 .short-card-bottom {
